#
# cMake configuration file for generating nxuStream library files for Torque3D engine
# 

SET( PHYSX_NXUSTREAM2_INCLUDE_DIR "${PHYSX_SDK_DIR}//Tools//NxuStream2" )

SET( PHYSX_INCLUDE_DIR "${PHYSX_SDK_DIR}//SDKs//Physics//include" )
SET( PHYSX_LOADER_INCLUDE_DIR "${PHYSX_SDK_DIR}//SDKs//PhysXLoader//include" )
SET( PHYSX_FOUNDATION_INCLUDE_DIR "${PHYSX_SDK_DIR}//SDKs//Foundation//include" )
SET( PHYSX_COOKING_INCLUDE_DIR "${PHYSX_SDK_DIR}//SDKs//Cooking//include" )
SET( PHYSX_CHARACTER_INCLUDE_DIR "${PHYSX_SDK_DIR}//SDKs//NxCharacter//include" )

SET( NXUSTREAM2_SOURCES
    ${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Asc2Bin.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ColladaExport.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ColladaImport.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_cooking.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_customcopy.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_File.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Geometry.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_GraphicsMesh.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_helper.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_hull.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_PhysicsExport.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_PhysicsInstantiator.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ScaledCopy.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_schema.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_SchemaStream.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Streaming.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_string.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinystr.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinyxml.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinyxmlerror.cpp
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinyxmlparser.cpp
)

SET( NXUSTREAM2_HEADERS
    ${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Asc2Bin.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ColladaExport.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ColladaImport.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_cooking.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_customcopy.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_File.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Geometry.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_GraphicsMesh.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_helper.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_hull.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_PhysicsExport.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_PhysicsInstantiator.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_ScaledCopy.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_schema.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_SchemaStream.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_SchemaTypes.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_Streaming.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_string.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinystr.h
	${PHYSX_NXUSTREAM2_INCLUDE_DIR}/NXU_tinyxml.h
)

ADD_DEFINITIONS( -DWIN32 -DUNICODE -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS )
INCLUDE_DIRECTORIES( ${PHYSX_LOADER_INCLUDE_DIR} ${PHYSX_INCLUDE_DIR} ${PHYSX_FOUNDATION_INCLUDE_DIR} ${PHYSX_COOKING_INCLUDE_DIR} ${PHYSX_CHARACTER_INCLUDE_DIR} )
ADD_LIBRARY( nxuStream2 ${NXUSTREAM2_HEADERS} ${NXUSTREAM2_SOURCES} )

# Dushan - NOTE to myself 
#        - test this on MacOS and FreeBSD
IF( UNIX )
    SET_TARGET_PROPERTIES(nxuStream2 PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -fPIC")
ENDIF( UNIX )